Sat Nov  2 09:39:09 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (do_deferred_progs): Don't access memory once it is
	freed (we already did it right for checkin_progs; do the same
	thing for update_progs).

	* update.c, client.c, classify.c, client.h, diff.c, commit.c,
	create_adm.c: Nuke more PATH_MAX.

Fri Nov  1 18:22:32 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* error.h: Define PROTO if it is not defined.

Wed Oct 30 08:53:20 1996  jalving@ibm.net

	* patch.c (patch_fileproc): Set line1 and line2 to NULL up-front
	(before the first "goto out") so we don't try to free them.

Wed Oct 30 08:53:20 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (remove_file, commit_filesdoneproc), run.c (run_print,
	run_exec), modules.c (open_module, cat_module, do_module), update.c
	(update_dirleave_proc), tag.c (tag_fileproc): Call cvs_out* rather
	than stdio.
	* server.c (serve_expand_modules): Remove comment about do_module
	writing to stdout/stderr; above changes should fix this.

Tue Oct 29 17:23:59 1996  Ian Lance Taylor  <ian@cygnus.com>

	* status.c (tag_list_proc): When printing the tag name, don't
	truncate it to 25 characters.

Tue Oct 29 12:49:07 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c, checkin.c, checkout.c, filesubr.c: Nuke arbitrary limit
	of PATH_MAX.  Many more such limits surely remain.

	* fileattr.c (fileattr_set): Set attrs_modified *after* we might
	call fileattr_read, because fileattr_read clears it.
	* sanity.sh (devcom2): New tests, test for above fix and other
	behaviors I discovered in the process of looking into it.

Mon Oct 28 08:55:57 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	The following changes are to ensure that SYSTEM_CLEANUP is always
	called.
	* error.c, cvs.h, main.c: Remove error_set_cleanup and related
	machinery.  It was for a time when error.c was intended to be
	shared with other programs, but that is no longer true.