@@ -1,3 +1,8 @@
+Sun Nov  3 18:24:28 1996  Noel Cragg  <noel@gargle.rain.org>
+
+	* sanity.sh (info): add new tests that check behavior of format
+ 	string substitution in loginfo file.
+
 Sat Nov  2 09:39:09 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* client.c (do_deferred_progs): Don't access memory once it is
